--- a/src/components/Page/PageBody/ProjectSection/projectData.json
+++ b/src/components/Page/PageBody/ProjectSection/projectData.json
@@ -1,26 +1,27 @@
 [
   {
     "key": 1,
-    "title": "High flying drone",
-    "date": "July 12, 2021",
-    "language": "Python",
-    "imageUrl": "https://cdn.mos.cms.futurecdn.net/CcBk3wsbLZzBLFunpr2pSW.jpg",
-    "details": ["Made a drone", "Shot it into space", "Took pictures"]
+    "title": "ColorCube Class for UAVA",
+    "date": "Spring 2019",
+    "language": ["Python","#fbbd08"],
+    "imageUrl": "https://uavaustin.org/assets/img/uava_logo_two_tone_dark.png",
+    "details": ["Improved accuracy of the color classification component of our competition plane","Used HSV instead of RBG color model to make a 3-D coordinate system","Created cubes for various colors and checked whether input color was contained in cubes"]
   },
   {
     "key": 2,
-    "title": "Trip to India",
-    "date": "June 12, 2021",
-    "language": "Python",
-    "imageUrl": "https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg",
-    "details": ["Made a drone", "Shot it into space", "Took pictures"]
+    "title": "Manual Image Rec UI for UAVA",
+    "date": "Spring 2019",
+    "language": ["ReactJS","#00d8ff"],
+    "imageUrl": "https://i.imgur.com/ogYYHiL.png",
+    "details": ["Used ReactJS and Semantic UI React to develop the Manual Image Recognition UI for competition"]
   },
   {
     "key": 3,
     "title": "My website",
-    "date": "June 11, 2019",
-    "language": "ReactJS",
+    "date": "June 2019",
+    "language": ["ReactJS","#00d8ff"],
     "imageUrl": "https://cdn.freebiesupply.com/logos/large/2x/react-1-logo-png-transparent.png",
-    "details": ["Made a drone", "Shot it into space", "Took pictures"]
+    "githubUrl": "https://github.com/kadhirumasankar/kadhirumasankar.github.io",
+    "details": ["Practiced ReactJS after learning it from online tutorials","Implemented SCSS in some places", "Extensively used Grid and Flexbox"]
   }
 ]
