Trying to set up GHpages x5

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gitname.github.io/react-gh-pages",
+  "homepage": "http://kadhirumasankar.github.io/",
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
