--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "http://kadhirumasankar.github.io/",
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kadhirumasankar.github.io/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -11,12 +11,12 @@
     "semantic-ui-react": "^0.87.1"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
