Added a fullscreen header

--- a/src/components/Page/PageBody/ProjectSection/projectData.json
+++ b/src/components/Page/PageBody/ProjectSection/projectData.json
@@ -22,6 +22,6 @@
     "language": ["ReactJS","#00d8ff"],
     "imageUrl": "https://cdn.freebiesupply.com/logos/large/2x/react-1-logo-png-transparent.png",
     "githubUrl": "https://github.com/kadhirumasankar/kadhirumasankar.github.io",
-    "details": ["Practiced ReactJS after learning it from online tutorials","Implemented SCSS in some places", "Extensively used Grid and Flexbox"]
+    "details": ["Made entirely from scratch using ReactJS","Implemented SCSS in some places", "Extensively used Grid and Flexbox"]
   }
 ]
