--- a/src/components/Page/PageBody/ProjectSection/projectData.json
+++ b/src/components/Page/PageBody/ProjectSection/projectData.json
@@ -1,6 +1,17 @@
 [
   {
     "key": 1,
+    "size": "small",
+    "title": "Sophomore Year",
+    "date": "Fall 2018 - Spring 2019",
+    "language": ["Education","#bb5826"],
+    "imageUrl": "https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Texas_Longhorns_logo.svg/1280px-Texas_Longhorns_logo.svg.png",
+    "additionalText": "Classes taken:",
+    "details": ["Spacecraft Dynamics", "Low-Speed Aerodynamics", "Mechanics of Solids", "Vector Calculus", "Dynamics", "Thermodynamics", "Engineering Computation", "Foundations of Accounting",  "Engineering Communication"]
+  },
+  {
+    "key": 2,
+    "size": "normal",
     "title": "ColorCube Class for UAVA",
     "date": "Spring 2019",
     "language": ["Python","#fbbd08"],
@@ -8,7 +19,8 @@
     "details": ["Improved accuracy of the color classification component of our competition plane","Used HSV instead of RBG color model to make a 3-D coordinate system","Created cubes for various colors and checked whether input color was contained in cubes"]
   },
   {
-    "key": 2,
+    "key": 3,
+    "size": "normal",
     "title": "Manual Image Rec UI for UAVA",
     "date": "Spring 2019",
     "language": ["ReactJS","#00d8ff"],
@@ -16,7 +28,8 @@
     "details": ["Used ReactJS and Semantic UI React to develop the Manual Image Recognition UI for competition"]
   },
   {
-    "key": 3,
+    "key": 4,
+    "size": "normal",
     "title": "My website",
     "date": "June 2019",
     "language": ["ReactJS","#00d8ff"],
