--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "homepage": "http://kadhirumasankar.github.io/",
   "dependencies": {
+    "history": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1"
