--- a/src/components/Page/PageBody/Work/projectData.json
+++ b/src/components/Page/PageBody/Work/projectData.json
@@ -25,6 +25,7 @@
     "title": "ColorCube Class for UAVA",
     "date": "Spring 2019",
     "language": ["Python","#fbbd08"],
+    "githubUrl": "private",
     "imageUrl": "https://uavaustin.org/assets/img/uava_logo_two_tone_dark.png",
     "details": ["Improved accuracy of the color classification component of our competition plane","Used HSV instead of RBG color model to make a 3-D coordinate system","Created cubes for various colors and checked whether input color was contained in cubes"]
   },
@@ -35,6 +36,7 @@
     "date": "Spring 2019",
     "language": ["ReactJS","#00d8ff"],
     "imageUrl": "https://i.imgur.com/ogYYHiL.png",
+    "githubUrl": "private",
     "details": ["Used ReactJS and Semantic UI React to develop the Manual Image Recognition UI for competition"]
   },
   {
