--- a/src/components/Page/PageBody/Work/projectData.json
+++ b/src/components/Page/PageBody/Work/projectData.json
@@ -25,28 +25,48 @@
     "title": "ColorCube Class for UAVA",
     "date": "Spring 2019",
     "language": ["Python","#fbbd08"],
-    "githubUrl": "private",
+    "githubUrl": "https://github.com/uavaustin/target-finder/blob/master/target_finder/color_cube.py",
     "imageUrl": "https://uavaustin.org/assets/img/uava_logo_two_tone_dark.png",
     "details": ["Improved accuracy of the color classification component of our competition plane","Used HSV instead of RBG color model to make a 3-D coordinate system","Created cubes for various colors and checked whether input color was contained in cubes"]
   },
   {
     "key": 4,
     "size": "normal",
-    "title": "Manual Image Rec UI for UAVA",
-    "date": "Spring 2019",
-    "language": ["ReactJS","#00d8ff"],
-    "imageUrl": "https://i.imgur.com/ogYYHiL.png",
-    "githubUrl": "private",
-    "details": ["Used ReactJS and Semantic UI React to develop the Manual Image Recognition UI for competition"]
-  },
-  {
-    "key": 5,
-    "size": "normal",
-    "title": "My website",
-    "date": "June 2019",
+    "title": "This website",
+    "date": "Summer 2019",
     "language": ["ReactJS","#00d8ff"],
     "imageUrl": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/640px-React-icon.svg.png",
     "githubUrl": "https://github.com/kadhirumasankar/kadhirumasankar.github.io",
     "details": ["Made entirely from scratch using ReactJS","Implemented SCSS in some places", "Extensively used Grid and Flexbox"]
+  },
+  {
+    "key": 5,
+    "size": "small",
+    "title": "Junior Year",
+    "date": "Fall 2019 - *",
+    "language": ["Education","#bb5826"],
+    "imageUrl": "https://i.imgur.com/orTHsos.png",
+    "additionalText": "Classes taken:",
+    "details": ["Linear Systems Analysis", "Electromechanical Systems", "Attitude Dynamics", "Rocket Engineering Practicum", "Foundations of Management"]
+  },
+  {
+    "key": 6,
+    "size": "normal",
+    "title": "Manual Image Rec UI for UAVA",
+    "date": "Spring 2019 - *",
+    "language": ["ReactJS","#00d8ff"],
+    "imageUrl": "https://i.imgur.com/ogYYHiL.png",
+    "githubUrl": "https://github.com/uavaustin/manual-image-rec",
+    "details": ["Using ReactJS and Semantic UI React to develop the Manual Image Recognition UI for competition"]
+  },
+  {
+    "key": 7,
+    "size": "normal",
+    "title": "Parachute Drift Model for TREL",
+    "date": "Fall 2019",
+    "language": ["MATLAB","#842613"],
+    "imageUrl": "https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png",
+    "githubUrl": "https://gist.github.com/kadhirumasankar/43e64613d691f331b2f8273c45dedbd9",
+    "details": ["Using the Monte Carlo simulation to predict drift area for the Texas Rocket Engineering Lab rocket after the parachutes are deployed"]
   }
 ]
