--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "homepage": "http://kadhirumasankar.github.io/",
   "dependencies": {
+    "acorn": "6.4.1",
     "eslint-utils": "^1.4.2",
     "history": "^1.17.0",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
+    "minimist": "1.2.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
