--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "acorn": "6.4.1",
     "eslint-utils": "^1.4.2",
     "history": "^1.17.0",
+    "jquery": "3.5.0",
     "lodash": "^4.17.15",
     "lodash.template": "^4.5.0",
     "minimist": "1.2.2",
