--- a/src/components/Page/PageBody/Work/projectData.json
+++ b/src/components/Page/PageBody/Work/projectData.json
@@ -43,7 +43,7 @@
     "date": "Spring 2019",
     "language": ["Python", "#fbbd08"],
     "githubUrl": "https://github.com/uavaustin/target-finder/blob/master/target_finder/color_cube.py",
-    "imageUrl": "https://uavaustin.org/assets/img/uava_logo_two_tone_dark.png",
+    "imageUrl": "https://sec.engr.utexas.edu/files/2020/09/uava_logo_two_tone_dark.png",
     "details": [
       "Improved accuracy of the color classification component of our competition plane",
       "Used HSV instead of RBG color model to make a 3-D coordinate system",
@@ -188,13 +188,14 @@
     "key": 13,
     "size": "small",
     "title": "First Year of Graduate School",
-    "date": "Fall 2021 - Present",
+    "date": "Fall 2021 - Summer 2022",
     "language": ["Georgia Tech", "#B3A369"],
-    "imageUrl": "https://brand.gatech.edu/sites/default/files/inline-images/GeorgiaTech_RGB.png",
+    "imageUrl": "https://upload.wikimedia.org/wikipedia/en/thumb/6/6c/Georgia_Tech%27s_Buzz_logo.svg/1200px-Georgia_Tech%27s_Buzz_logo.svg.png",
     "additionalText": "Classes taken:",
     "details": [
       "Random Processes and Kalman Filtering",
       "Optimal Guidance and Control",
+      "Planetary Entry, Descent, and Landing",
       "Probability and Statistics",
       "Topics in Linear Algebra"
     ]
@@ -203,13 +204,38 @@
     "key": 14,
     "size": "small",
     "title": "Replay Buffer Implementation in a Multi-agent Heterogeneous Environment",
-    "date": "September 2021 - Present",
+    "date": "September 2021 - May 2022",
     "language": ["Research", "#6c757d"],
     "imageUrl": "http://sites.gatech.edu/mcg-lab/wp-content/uploads/sites/958/2019/01/CORE_robotics_full_text.png",
     "details": [
-      "Working as part of the Georgia Tech Cognitive Optimization and Relational (CORE) Robotics Lab to implement a replay buffer to train a multi-agent heterogeneous environment",
+      "Worked as part of the Georgia Tech Cognitive Optimization and Relational (CORE) Robotics Lab to implement a replay buffer to train a multi-agent heterogeneous environment",
       "Researched pros and cons of using off-policy algorithms instead of on-policy algorithms",
-      "Learning extensively about reinforcement learning algorithms, experience sampling, and tuning practices. Gaining experience with Python (specifically the PyTorch package), GitHub, working on remote machines"
+      "Learned extensively about reinforcement learning algorithms, experience sampling, and tuning practices. Gained experience with Python (specifically the PyTorch package), GitHub, working on remote machines"
+    ]
+  },
+  {
+    "key": 15,
+    "size": "small",
+    "title": "Internship at Sandia National Labs [WIP]",
+    "date": "May 2022 - Present",
+    "language": ["Sandia National Labs", "#26abe2"],
+    "imageUrl": "https://cdn-icons-png.flaticon.com/512/5578/5578703.png",
+    "details": [
+      "This card is currently a work-in-progress since the work I did this summer is currently going through Sandia's Review & Approval process to be cleared for unlimited release"
+    ]
+  },
+  {
+    "key": 16,
+    "size": "small",
+    "title": "Second Year of Graduate School",
+    "date": "Fall 2022 - Present",
+    "language": ["Georgia Tech", "#B3A369"],
+    "imageUrl": "https://brand.gatech.edu/sites/default/files/inline-images/GeorgiaTech_RGB.png",
+    "additionalText": "Classes taken:",
+    "details": [
+      "Linear Control Systems",
+      "Intro to Mechatronics",
+      "Cognitive Engineering"
     ]
   }
 ]
