--- a/src/components/Page/PageBody/Work/projectData.json
+++ b/src/components/Page/PageBody/Work/projectData.json
@@ -302,7 +302,9 @@
     "details": [
       "Linear Control Systems",
       "Intro to Mechatronics",
-      "Cognitive Engineering"
+      "Cognitive Engineering",
+      "Nonlinear Control Systems",
+      "Satellite Orbit Determination"
     ]
   }
 ]
