--- a/package.json
+++ b/package.json
@@ -2,34 +2,29 @@
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://kadhirumasankar.github.io/",
   "dependencies": {
-    "acorn": "6.4.1",
-    "eslint-utils": "^1.4.2",
-    "history": "^1.17.0",
-    "jquery": "3.5.0",
-    "lodash": "^4.17.21",
-    "lodash.template": "^4.5.0",
-    "minimist": "1.2.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router": "^5.0.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.1",
-    "serialize-javascript": "3.1.0"
+    "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -42,9 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1",
-    "prettier": "2.3.2"
   }
 }
